--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="product-info">
                         <h2>Карта рассрочки</h2>
                         <p>Снятие наличных без комиссии</p>
-                        <a href="https://trnsfx.ru/go/sntla2f47j" class="apply-btn" data-product="2">Оформить</a>
+                        <a href="https://trnsfx.ru/go/sfxh90caqh" class="apply-btn" data-product="2">Оформить</a>
                     </div>
                 </div>
             </div>
